Fixed navbar moving out of place

--- a/client/views/common/NavBar.styl
+++ b/client/views/common/NavBar.styl
@@ -1,7 +1,7 @@
 @import "../../styles/colors.styl"
 
 .navbar
-  position fixed
+  position absolute
   top 0
   left 0
   background rgba(0,0,0,0)
